# gaucho-cache

./: .gitignore  GOAL.md  PLAN.md  README.md  ROADMAP.md  book_report.html  index.html  pyproject.toml
chapters/: 01-mission.md  02-references.md  03-dataset.md  04-routing.md  05-zero-spend.md  06-quality.md  07-product-agnostic.md  08-conclusions.md  09-battle-test.md  10-sales-turing.md  11-transfer.md  12-retrospective.md  13-closure.md  14-conversations.md  15-redteam.md  16-conversion.md  17-conversation-turing.md  18-learning-proxy.md  19-situation-matrix.md  20-checkpoint.md  21-adversarial.md  22-evolution.md  23-domain-spec.md  24-reality.md  25-the-parity-floor.md  26-the-service-climb.md  27-the-cluster-unlock.md  28-correct-behaviour.md  29-dialogue-state.md  30-the-frontier.md  99-pricing.md
data/: catalog.json  cocoshoes_facts.json  contract_extensions.yaml  curated_exact.json  intents_slice.yaml  orders.json  payment_ladder.json  proxy_traffic.sqlite  shoes_intents.yaml  slice.sqlite  spend_ledger.jsonl  template_variants.json
gaucho_cache/: __init__.py  api.py  cerebras.py  classifier.py  cli.py  contracts.py  dataset.py  demo.py  evolution.py  proxy.py  render.py  service.py  serving.py  spec.py  spend.py
index/: shoes-thresholds.json  shoes-v1.npz  slice-v1.npz  thresholds.json
reports/: battle-test.md  coco_labels.json  product-agnostic-check.md  quality-equivalence.md  reality_coverage.json  sales-turing.md  slice-eval.md  zero-spend-proof.md
scripts/: arbitrate_ambiguity.py  audit_question_coverage.py  battle_eval.py  benchmark_matrix.py  (+33 more)
(+39 files in other folders)
