[project]
name = "gaucho-cache"
version = "0.1.0"
description = "Semantic stage cache for FSM-funnel chatbots: zero-marginal-cost turns"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "openai>=1.40",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.24",
]

[project.scripts]
gaucho-cache = "gaucho_cache.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaucho_cache"]
